--- a/codec-dns/pom.xml
+++ b/codec-dns/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>apacheds-protocol-dns</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-all</artifactId>
+          <version>4.1.1.Final</version>
+      </dependency>
   </dependencies>
 </project>
 
