--- a/codec-redis/pom.xml
+++ b/codec-redis/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>netty-codec</artifactId>
       <version>${project.version}</version>
     </dependency>
+      <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-common</artifactId>
+          <version>4.1.5.Final</version>
+      </dependency>
   </dependencies>
 
 </project>
